source/ocwWrp_nativeClasses_signatures.h



// Other OpenCV native classes and pointers, C++ vectors
Size_t*   pCvSizeCreate();

void     pCvSizeDelete( Size_t* wrapper);

void     pCvSizeToStruct( Size_t* wrapper, CvSizeS* dest);

void     pCvSizeFromStruct( Size_t* wrapper, CvSizeS* dest);

Rect_t*   pCvRectCreate();

void     pCvRectDelete( Rect_t* wrapper);

void     pCvRectToStruct( Rect_t* wrapper, CvRectS* dest);

void     pCvRectFromStruct( Rect_t* wrapper, CvRectS* dest);

Range_t*   pCvRangeCreate();

void     pCvRangeDelete( Range_t* wrapper);

void     pCvRangeToStruct( Range_t* wrapper, CvRangeS* dest);

void     pCvRangeFromStruct( Range_t* wrapper, CvRangeS* dest);

CvSlice_t*   pCvCvSliceCreate();

void     pCvCvSliceDelete( CvSlice_t* wrapper);

void     pCvCvSliceToStruct( CvSlice_t* wrapper, CvCvSliceS* dest);

void     pCvCvSliceFromStruct( CvSlice_t* wrapper, CvCvSliceS* dest);

Point_t*   pCvPointCreate();

void     pCvPointDelete( Point_t* wrapper);

void     pCvPointToStruct( Point_t* wrapper, CvPointS* dest);

void     pCvPointFromStruct( Point_t* wrapper, CvPointS* dest);

Point2f_t*   pCvPoint2fCreate();

void     pCvPoint2fDelete( Point2f_t* wrapper);

void     pCvPoint2fToStruct( Point2f_t* wrapper, CvPoint2fS* dest);

void     pCvPoint2fFromStruct( Point2f_t* wrapper, CvPoint2fS* dest);

Point2d_t*   pCvPoint2dCreate();

void     pCvPoint2dDelete( Point2d_t* wrapper);

void     pCvPoint2dToStruct( Point2d_t* wrapper, CvPoint2dS* dest);

void     pCvPoint2dFromStruct( Point2d_t* wrapper, CvPoint2dS* dest);

Vec2d_t*   pCvVec2dCreate();

void     pCvVec2dDelete( Vec2d_t* wrapper);

void     pCvVec2dToStruct( Vec2d_t* wrapper, CvVec2dS* dest);

void     pCvVec2dFromStruct( Vec2d_t* wrapper, CvVec2dS* dest);

Vec3d_t*   pCvVec3dCreate();

void     pCvVec3dDelete( Vec3d_t* wrapper);

void     pCvVec3dToStruct( Vec3d_t* wrapper, CvVec3dS* dest);

void     pCvVec3dFromStruct( Vec3d_t* wrapper, CvVec3dS* dest);

Vec3b_t*   pCvVec3bCreate();

void     pCvVec3bDelete( Vec3b_t* wrapper);

void     pCvVec3bToStruct( Vec3b_t* wrapper, CvVec3bS* dest);

void     pCvVec3bFromStruct( Vec3b_t* wrapper, CvVec3bS* dest);

Vec4f_t*   pCvVec4fCreate();

void     pCvVec4fDelete( Vec4f_t* wrapper);

void     pCvVec4fToStruct( Vec4f_t* wrapper, CvVec4fS* dest);

void     pCvVec4fFromStruct( Vec4f_t* wrapper, CvVec4fS* dest);

Vec6f_t*   pCvVec6fCreate();

void     pCvVec6fDelete( Vec6f_t* wrapper);

void     pCvVec6fToStruct( Vec6f_t* wrapper, CvVec6fS* dest);

void     pCvVec6fFromStruct( Vec6f_t* wrapper, CvVec6fS* dest);

Scalar_t*   pCvScalarCreate();

void     pCvScalarDelete( Scalar_t* wrapper);

void     pCvScalarToStruct( Scalar_t* wrapper, CvScalarS* dest);

void     pCvScalarFromStruct( Scalar_t* wrapper, CvScalarS* dest);

RotatedRect_t*   pCvRotatedRectCreate();

void     pCvRotatedRectDelete( RotatedRect_t* wrapper);

void     pCvRotatedRectToStruct( RotatedRect_t* wrapper, CvRotatedRectS* dest);

void     pCvRotatedRectFromStruct( RotatedRect_t* wrapper, CvRotatedRectS* dest);

CvDTreeNode_t*   pCvCvDTreeNodeCreate();

void     pCvCvDTreeNodeDelete( CvDTreeNode_t* wrapper);

void     pCvCvDTreeNodeToStruct( CvDTreeNode_t* wrapper, CvCvDTreeNodeS* dest);

void     pCvCvDTreeNodeFromStruct( CvDTreeNode_t* wrapper, CvCvDTreeNodeS* dest);

TermCriteria_t*   pCvTermCriteriaCreate();

void     pCvTermCriteriaDelete( TermCriteria_t* wrapper);

void     pCvTermCriteriaToStruct( TermCriteria_t* wrapper, CvTermCriteriaS* dest);

void     pCvTermCriteriaFromStruct( TermCriteria_t* wrapper, CvTermCriteriaS* dest);

CvTermCriteria_t*   pCvCvTermCriteriaCreate();

void     pCvCvTermCriteriaDelete( CvTermCriteria_t* wrapper);

void     pCvCvTermCriteriaToStruct( CvTermCriteria_t* wrapper, CvCvTermCriteriaS* dest);

void     pCvCvTermCriteriaFromStruct( CvTermCriteria_t* wrapper, CvCvTermCriteriaS* dest);

Moments_t*   pCvMomentsCreate();

void     pCvMomentsDelete( Moments_t* wrapper);

void     pCvMomentsToStruct( Moments_t* wrapper, CvMomentsS* dest);

void     pCvMomentsFromStruct( Moments_t* wrapper, CvMomentsS* dest);

IndexParams_t*   pCvIndexParamsCreate();

void     pCvIndexParamsDelete( IndexParams_t* wrapper);

SearchParams_t*   pCvSearchParamsCreate();

void     pCvSearchParamsDelete( SearchParams_t* wrapper);

CvSVMParams_t*   pCvCvSVMParamsCreate();

void     pCvCvSVMParamsDelete( CvSVMParams_t* wrapper);

CvParamGrid_t*   pCvCvParamGridCreate();

void     pCvCvParamGridDelete( CvParamGrid_t* wrapper);

CvGBTreesParams_t*   pCvCvGBTreesParamsCreate();

void     pCvCvGBTreesParamsDelete( CvGBTreesParams_t* wrapper);

BackgroundSubtractor_t*   pCvBackgroundSubtractorCreate();

void     pCvBackgroundSubtractorDelete( BackgroundSubtractor_t* wrapper);

CvStatModel_t*   pCvCvStatModelCreate();

void     pCvCvStatModelDelete( CvStatModel_t* wrapper);

vector_Mat*   pCvVectorMatCreate(int n);

void   pCvVectorMatDelete(vector_Mat* wrapper);

int   pCvVectorMatLength(vector_Mat* wrapper);

Mat*   pCvVectorMatGet(vector_Mat* wrapper, int index);

Mat*   pCvVectorMatSet(vector_Mat* wrapper, int index, Mat* value);

vector_string*   pCvVectorstringCreate(int n);

void   pCvVectorstringDelete(vector_string* wrapper);

int   pCvVectorstringLength(vector_string* wrapper);

string*   pCvVectorstringGet(vector_string* wrapper, int index);

string*   pCvVectorstringSet(vector_string* wrapper, int index, string* value);

vector_KeyPoint*   pCvVectorKeyPointCreate(int n);

void   pCvVectorKeyPointDelete(vector_KeyPoint* wrapper);

int   pCvVectorKeyPointLength(vector_KeyPoint* wrapper);

KeyPoint*   pCvVectorKeyPointGet(vector_KeyPoint* wrapper, int index);

KeyPoint*   pCvVectorKeyPointSet(vector_KeyPoint* wrapper, int index, KeyPoint* value);

vector_float*   pCvVectorfloatCreate(int n);

void   pCvVectorfloatDelete(vector_float* wrapper);

int   pCvVectorfloatLength(vector_float* wrapper);

float   pCvVectorfloatGet(vector_float* wrapper, int index);

float   pCvVectorfloatSet(vector_float* wrapper, int index, float value);

vector_int*   pCvVectorintCreate(int n);

void   pCvVectorintDelete(vector_int* wrapper);

int   pCvVectorintLength(vector_int* wrapper);

int   pCvVectorintGet(vector_int* wrapper, int index);

int   pCvVectorintSet(vector_int* wrapper, int index, int value);

vector_uchar*   pCvVectorucharCreate(int n);

void   pCvVectorucharDelete(vector_uchar* wrapper);

int   pCvVectorucharLength(vector_uchar* wrapper);

uchar   pCvVectorucharGet(vector_uchar* wrapper, int index);

uchar   pCvVectorucharSet(vector_uchar* wrapper, int index, uchar value);

vector_Rect*   pCvVectorRectCreate(int n);

void   pCvVectorRectDelete(vector_Rect* wrapper);

int   pCvVectorRectLength(vector_Rect* wrapper);

Rect*   pCvVectorRectGet(vector_Rect* wrapper, int index);

Rect*   pCvVectorRectSet(vector_Rect* wrapper, int index, Rect* value);

vector_double*   pCvVectordoubleCreate(int n);

void   pCvVectordoubleDelete(vector_double* wrapper);

int   pCvVectordoubleLength(vector_double* wrapper);

double   pCvVectordoubleGet(vector_double* wrapper, int index);

double   pCvVectordoubleSet(vector_double* wrapper, int index, double value);

vector_DMatch*   pCvVectorDMatchCreate(int n);

void   pCvVectorDMatchDelete(vector_DMatch* wrapper);

int   pCvVectorDMatchLength(vector_DMatch* wrapper);

DMatch*   pCvVectorDMatchGet(vector_DMatch* wrapper, int index);

DMatch*   pCvVectorDMatchSet(vector_DMatch* wrapper, int index, DMatch* value);

vector_Point*   pCvVectorPointCreate(int n);

void   pCvVectorPointDelete(vector_Point* wrapper);

int   pCvVectorPointLength(vector_Point* wrapper);

Point*   pCvVectorPointGet(vector_Point* wrapper, int index);

Point*   pCvVectorPointSet(vector_Point* wrapper, int index, Point* value);

vector_Point2f*   pCvVectorPoint2fCreate(int n);

void   pCvVectorPoint2fDelete(vector_Point2f* wrapper);

int   pCvVectorPoint2fLength(vector_Point2f* wrapper);

Point2f*   pCvVectorPoint2fGet(vector_Point2f* wrapper, int index);

Point2f*   pCvVectorPoint2fSet(vector_Point2f* wrapper, int index, Point2f* value);

vector_Vec4f*   pCvVectorVec4fCreate(int n);

void   pCvVectorVec4fDelete(vector_Vec4f* wrapper);

int   pCvVectorVec4fLength(vector_Vec4f* wrapper);