Delphi/unOcvWrapper_nativeClasses.pas

Function    pCvSizeCreate(): PCvSize_t; cdecl;
Procedure   pCvSizeDelete(const wrapper: PCvSize_t); cdecl;
Procedure   pCvSizeToStruct(const wrapper: PCvSize_t; const dest: PCvSizeS); cdecl;
Procedure   pCvSizeFromStruct(const wrapper: PCvSize_t; const src: PCvSizeS); cdecl;
Function    pCvRectCreate(): PCvRect_t; cdecl;
Procedure   pCvRectDelete(const wrapper: PCvRect_t); cdecl;
Procedure   pCvRectToStruct(const wrapper: PCvRect_t; const dest: PCvRectS); cdecl;
Procedure   pCvRectFromStruct(const wrapper: PCvRect_t; const src: PCvRectS); cdecl;
Function    pCvRangeCreate(): PCvRange_t; cdecl;
Procedure   pCvRangeDelete(const wrapper: PCvRange_t); cdecl;
Procedure   pCvRangeToStruct(const wrapper: PCvRange_t; const dest: PCvRangeS); cdecl;
Procedure   pCvRangeFromStruct(const wrapper: PCvRange_t; const src: PCvRangeS); cdecl;
Function    pCvCvSliceCreate(): PCvCvSlice_t; cdecl;
Procedure   pCvCvSliceDelete(const wrapper: PCvCvSlice_t); cdecl;
Procedure   pCvCvSliceToStruct(const wrapper: PCvCvSlice_t; const dest: PCvSliceS); cdecl;
Procedure   pCvCvSliceFromStruct(const wrapper: PCvCvSlice_t; const src: PCvSliceS); cdecl;
Function    pCvPointCreate(): PCvPoint_t; cdecl;
Procedure   pCvPointDelete(const wrapper: PCvPoint_t); cdecl;
Procedure   pCvPointToStruct(const wrapper: PCvPoint_t; const dest: PCvPointS); cdecl;
Procedure   pCvPointFromStruct(const wrapper: PCvPoint_t; const src: PCvPointS); cdecl;
Function    pCvPoint2fCreate(): PCvPoint2f_t; cdecl;
Procedure   pCvPoint2fDelete(const wrapper: PCvPoint2f_t); cdecl;
Procedure   pCvPoint2fToStruct(const wrapper: PCvPoint2f_t; const dest: PCvPoint2fS); cdecl;
Procedure   pCvPoint2fFromStruct(const wrapper: PCvPoint2f_t; const src: PCvPoint2fS); cdecl;
Function    pCvPoint2dCreate(): PCvPoint2d_t; cdecl;
Procedure   pCvPoint2dDelete(const wrapper: PCvPoint2d_t); cdecl;
Procedure   pCvPoint2dToStruct(const wrapper: PCvPoint2d_t; const dest: PCvPoint2dS); cdecl;
Procedure   pCvPoint2dFromStruct(const wrapper: PCvPoint2d_t; const src: PCvPoint2dS); cdecl;
Function    pCvVec2dCreate(): PCvVec2d_t; cdecl;
Procedure   pCvVec2dDelete(const wrapper: PCvVec2d_t); cdecl;
Procedure   pCvVec2dToStruct(const wrapper: PCvVec2d_t; const dest: PCvVec2dS); cdecl;
Procedure   pCvVec2dFromStruct(const wrapper: PCvVec2d_t; const src: PCvVec2dS); cdecl;
Function    pCvVec3dCreate(): PCvVec3d_t; cdecl;
Procedure   pCvVec3dDelete(const wrapper: PCvVec3d_t); cdecl;
Procedure   pCvVec3dToStruct(const wrapper: PCvVec3d_t; const dest: PCvVec3dS); cdecl;
Procedure   pCvVec3dFromStruct(const wrapper: PCvVec3d_t; const src: PCvVec3dS); cdecl;
Function    pCvVec3bCreate(): PCvVec3b_t; cdecl;
Procedure   pCvVec3bDelete(const wrapper: PCvVec3b_t); cdecl;
Procedure   pCvVec3bToStruct(const wrapper: PCvVec3b_t; const dest: PCvVec3bS); cdecl;
Procedure   pCvVec3bFromStruct(const wrapper: PCvVec3b_t; const src: PCvVec3bS); cdecl;
Function    pCvVec4fCreate(): PCvVec4f_t; cdecl;
Procedure   pCvVec4fDelete(const wrapper: PCvVec4f_t); cdecl;
Procedure   pCvVec4fToStruct(const wrapper: PCvVec4f_t; const dest: PCvVec4fS); cdecl;
Procedure   pCvVec4fFromStruct(const wrapper: PCvVec4f_t; const src: PCvVec4fS); cdecl;
Function    pCvVec6fCreate(): PCvVec6f_t; cdecl;
Procedure   pCvVec6fDelete(const wrapper: PCvVec6f_t); cdecl;
Procedure   pCvVec6fToStruct(const wrapper: PCvVec6f_t; const dest: PCvVec6fS); cdecl;
Procedure   pCvVec6fFromStruct(const wrapper: PCvVec6f_t; const src: PCvVec6fS); cdecl;
Function    pCvScalarCreate(): PCvScalar_t; cdecl;
Procedure   pCvScalarDelete(const wrapper: PCvScalar_t); cdecl;
Procedure   pCvScalarToStruct(const wrapper: PCvScalar_t; const dest: PCvScalarS); cdecl;
Procedure   pCvScalarFromStruct(const wrapper: PCvScalar_t; const src: PCvScalarS); cdecl;
Function    pCvRotatedRectCreate(): PCvRotatedRect_t; cdecl;
Procedure   pCvRotatedRectDelete(const wrapper: PCvRotatedRect_t); cdecl;
Procedure   pCvRotatedRectToStruct(const wrapper: PCvRotatedRect_t; const dest: PCvRotatedRectS); cdecl;
Procedure   pCvRotatedRectFromStruct(const wrapper: PCvRotatedRect_t; const src: PCvRotatedRectS); cdecl;
Function    pCvCvDTreeNodeCreate(): PCvCvDTreeNode_t; cdecl;
Procedure   pCvCvDTreeNodeDelete(const wrapper: PCvCvDTreeNode_t); cdecl;
Procedure   pCvCvDTreeNodeToStruct(const wrapper: PCvCvDTreeNode_t; const dest: PCvDTreeNodeS); cdecl;
Procedure   pCvCvDTreeNodeFromStruct(const wrapper: PCvCvDTreeNode_t; const src: PCvDTreeNodeS); cdecl;
Function    pCvTermCriteriaCreate(): PCvTermCriteria_t; cdecl;
Procedure   pCvTermCriteriaDelete(const wrapper: PCvTermCriteria_t); cdecl;
Procedure   pCvTermCriteriaToStruct(const wrapper: PCvTermCriteria_t; const dest: PCvTermCriteriaS); cdecl;
Procedure   pCvTermCriteriaFromStruct(const wrapper: PCvTermCriteria_t; const src: PCvTermCriteriaS); cdecl;
Function    pCvCvTermCriteriaCreate(): PCvCvTermCriteria_t; cdecl;
Procedure   pCvCvTermCriteriaDelete(const wrapper: PCvCvTermCriteria_t); cdecl;
Procedure   pCvCvTermCriteriaToStruct(const wrapper: PCvCvTermCriteria_t; const dest: PCvTermCriteriaS); cdecl;
Procedure   pCvCvTermCriteriaFromStruct(const wrapper: PCvCvTermCriteria_t; const src: PCvTermCriteriaS); cdecl;
Function    pCvMomentsCreate(): PCvMoments_t; cdecl;
Procedure   pCvMomentsDelete(const wrapper: PCvMoments_t); cdecl;
Procedure   pCvMomentsToStruct(const wrapper: PCvMoments_t; const dest: PCvMomentsS); cdecl;
Procedure   pCvMomentsFromStruct(const wrapper: PCvMoments_t; const src: PCvMomentsS); cdecl;
Function    pCvIndexParamsCreate(): PCvIndexParams_t; cdecl;
Procedure   pCvIndexParamsDelete(const wrapper: PCvIndexParams_t); cdecl;
Function    pCvSearchParamsCreate(): PCvSearchParams_t; cdecl;
Procedure   pCvSearchParamsDelete(const wrapper: PCvSearchParams_t); cdecl;
Function    pCvCvSVMParamsCreate(): PCvCvSVMParams_t; cdecl;
Procedure   pCvCvSVMParamsDelete(const wrapper: PCvCvSVMParams_t); cdecl;
Function    pCvCvParamGridCreate(): PCvCvParamGrid_t; cdecl;
Procedure   pCvCvParamGridDelete(const wrapper: PCvCvParamGrid_t); cdecl;
Function    pCvCvGBTreesParamsCreate(): PCvCvGBTreesParams_t; cdecl;
Procedure   pCvCvGBTreesParamsDelete(const wrapper: PCvCvGBTreesParams_t); cdecl;
Function    pCvBackgroundSubtractorCreate(): PCvBackgroundSubtractor_t; cdecl;
Procedure   pCvBackgroundSubtractorDelete(const wrapper: PCvBackgroundSubtractor_t); cdecl;
Function    pCvCvStatModelCreate(): PCvCvStatModel_t; cdecl;
Procedure   pCvCvStatModelDelete(const wrapper: PCvCvStatModel_t); cdecl;
Function    pCvVectorMatCreate(const n: Integer): PCvvector_Mat; cdecl;
Procedure   pCvVectorMatDelete(const wrapper: PCvvector_Mat); cdecl;
Function    pCvVectorMatLength(const wrapper: PCvvector_Mat): Integer; cdecl;
Function    pCvVectorMatGet(const wrapper: PCvvector_Mat; const index: Integer): PCvMat_t; cdecl;
Function    pCvVectorMatSet(const wrapper: PCvvector_Mat; const index: Integer; const val: PCvMat_t): PCvMat_t; cdecl;
Function    pCvVectorstringCreate(const n: Integer): PCvvector_string; cdecl;
Procedure   pCvVectorstringDelete(const wrapper: PCvvector_string); cdecl;
Function    pCvVectorstringLength(const wrapper: PCvvector_string): Integer; cdecl;
Function    pCvVectorstringGet(const wrapper: PCvvector_string; const index: Integer): PCvstring_t; cdecl;
Function    pCvVectorstringSet(const wrapper: PCvvector_string; const index: Integer; const val: PCvstring_t): PCvstring_t; cdecl;
Function    pCvVectorKeyPointCreate(const n: Integer): PCvvector_KeyPoint; cdecl;
Procedure   pCvVectorKeyPointDelete(const wrapper: PCvvector_KeyPoint); cdecl;
Function    pCvVectorKeyPointLength(const wrapper: PCvvector_KeyPoint): Integer; cdecl;
Function    pCvVectorKeyPointGet(const wrapper: PCvvector_KeyPoint; const index: Integer): PCvKeyPoint_t; cdecl;
Function    pCvVectorKeyPointSet(const wrapper: PCvvector_KeyPoint; const index: Integer; const val: PCvKeyPoint_t): PCvKeyPoint_t; cdecl;
Function    pCvVectorfloatCreate(const n: Integer): PCvvector_float; cdecl;
Procedure   pCvVectorfloatDelete(const wrapper: PCvvector_float); cdecl;
Function    pCvVectorfloatLength(const wrapper: PCvvector_float): Integer; cdecl;
Function    pCvVectorfloatGet(const wrapper: PCvvector_float; const index: Integer): Single; cdecl;
Function    pCvVectorfloatSet(const wrapper: PCvvector_float; const index: Integer; const val: Single): Single; cdecl;
Function    pCvVectorintCreate(const n: Integer): PCvvector_int; cdecl;
Procedure   pCvVectorintDelete(const wrapper: PCvvector_int); cdecl;
Function    pCvVectorintLength(const wrapper: PCvvector_int): Integer; cdecl;
Function    pCvVectorintGet(const wrapper: PCvvector_int; const index: Integer): Integer; cdecl;
Function    pCvVectorintSet(const wrapper: PCvvector_int; const index: Integer; const val: Integer): Integer; cdecl;
Function    pCvVectorucharCreate(const n: Integer): PCvvector_uchar; cdecl;
Procedure   pCvVectorucharDelete(const wrapper: PCvvector_uchar); cdecl;
Function    pCvVectorucharLength(const wrapper: PCvvector_uchar): Integer; cdecl;
Function    pCvVectorucharGet(const wrapper: PCvvector_uchar; const index: Integer): Byte; cdecl;
Function    pCvVectorucharSet(const wrapper: PCvvector_uchar; const index: Integer; const val: Byte): Byte; cdecl;
Function    pCvVectorRectCreate(const n: Integer): PCvvector_Rect; cdecl;
Procedure   pCvVectorRectDelete(const wrapper: PCvvector_Rect); cdecl;
Function    pCvVectorRectLength(const wrapper: PCvvector_Rect): Integer; cdecl;
Function    pCvVectorRectGet(const wrapper: PCvvector_Rect; const index: Integer): PCvRect_t; cdecl;
Function    pCvVectorRectSet(const wrapper: PCvvector_Rect; const index: Integer; const val: PCvRect_t): PCvRect_t; cdecl;
Function    pCvVectordoubleCreate(const n: Integer): PCvvector_double; cdecl;
Procedure   pCvVectordoubleDelete(const wrapper: PCvvector_double); cdecl;
Function    pCvVectordoubleLength(const wrapper: PCvvector_double): Integer; cdecl;
Function    pCvVectordoubleGet(const wrapper: PCvvector_double; const index: Integer): Double; cdecl;
Function    pCvVectordoubleSet(const wrapper: PCvvector_double; const index: Integer; const val: Double): Double; cdecl;
Function    pCvVectorDMatchCreate(const n: Integer): PCvvector_DMatch; cdecl;
Procedure   pCvVectorDMatchDelete(const wrapper: PCvvector_DMatch); cdecl;
Function    pCvVectorDMatchLength(const wrapper: PCvvector_DMatch): Integer; cdecl;
Function    pCvVectorDMatchGet(const wrapper: PCvvector_DMatch; const index: Integer): PCvDMatch_t; cdecl;
Function    pCvVectorDMatchSet(const wrapper: PCvvector_DMatch; const index: Integer; const val: PCvDMatch_t): PCvDMatch_t; cdecl;
Function    pCvVectorPointCreate(const n: Integer): PCvvector_Point; cdecl;
Procedure   pCvVectorPointDelete(const wrapper: PCvvector_Point); cdecl;
Function    pCvVectorPointLength(const wrapper: PCvvector_Point): Integer; cdecl;
Function    pCvVectorPointGet(const wrapper: PCvvector_Point; const index: Integer): PCvPoint_t; cdecl;
Function    pCvVectorPointSet(const wrapper: PCvvector_Point; const index: Integer; const val: PCvPoint_t): PCvPoint_t; cdecl;
Function    pCvVectorPoint2fCreate(const n: Integer): PCvvector_Point2f; cdecl;
Procedure   pCvVectorPoint2fDelete(const wrapper: PCvvector_Point2f); cdecl;
Function    pCvVectorPoint2fLength(const wrapper: PCvvector_Point2f): Integer; cdecl;
Function    pCvVectorPoint2fGet(const wrapper: PCvvector_Point2f; const index: Integer): PCvPoint2f_t; cdecl;
Function    pCvVectorPoint2fSet(const wrapper: PCvvector_Point2f; const index: Integer; const val: PCvPoint2f_t): PCvPoint2f_t; cdecl;
Function    pCvVectorVec4fCreate(const n: Integer): PCvvector_Vec4f; cdecl;
Procedure   pCvVectorVec4fDelete(const wrapper: PCvvector_Vec4f); cdecl;
Function    pCvVectorVec4fLength(const wrapper: PCvvector_Vec4f): Integer; cdecl;
